Fix footer on small screens

--- a/mvurbanites/static/css/main.css
+++ b/mvurbanites/static/css/main.css
@@ -76,10 +76,13 @@ a:visited { color: #0D4780; }
     margin-left: 200px;
 }
 
+#break {
+    height: 75px;
+    clear: both;
+}
 
 #footer {
     width: 100%;
-    height: 75px;
     background-color: #f16421;
     border-top: 2px solid #9d3a0b;
     font-size: .8em;
